recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:3: error: type black is not a member of object java.awt.Color
  setColor(color:Color.black)
                       ^FourSquare:3: error: not found: value color
  setColor(color:Color.black)
           ^FourSquare:4: error: value n is not a member of object Int
  Int n = 100
      ^FourSquare:5: error: not found: value n
  drawSquare(n)
             ^FourSquare:7: error: not found: value n
  drawSquare(n)
             ^FourSquare:9: error: not found: value n
  drawSquare(n)
             ^FourSquare:11: error: not found: value n
  drawSquare(n)
             ^FourSquare:22: error: not found: value n
    forward(n)
            ^