recursion.logo.square.FourSquare.scala.code
override def run() {
  
  setColor(color:Color.black)
  Int n = 100
  drawSquare(n)
  moveTo(-100,0)
  drawSquare(n)
  moveTo(-100,-100)
  drawSquare(n)
  moveTo(0,-100)
  drawSquare(n)
  
  
}

def drawSquare(nbPas:Int):Unit = {
  
  penDown()
  
  for(i<-0 to 4){
    
    forward(n)
    left(90)
    
    
  }
  
  penUp()
  
}
